fix: cancel mobile browsers default getstures detection
1. mobile browsers gesture detection
2. .btn-play display

--- a/style/ui.css
+++ b/style/ui.css
@@ -909,6 +909,7 @@ ul#lyric {
 	background-size: contain;
 	background-repeat: no-repeat;
 	border: 2px solid red;
+	border-radius: 100%;
 	margin: 0 .5em;
 	padding: .5em 1em;
 }
