--- a/style/ui.css
+++ b/style/ui.css
@@ -115,6 +115,7 @@ span.mask {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,.4);
+	z-index: 49;
 }
 
 /* background default */
@@ -948,6 +949,7 @@ ul#lyric {
 	background-color: white;
 
 	overflow-y: scroll;
+	z-index: 50;
 }
 .sidebar #tag-userMessage{
 	width: 100%;
@@ -1145,8 +1147,9 @@ button#btn-showConsole {
 }
 .dConsole-window {
 	background-color: rgba(0,0,0, 0.9) !important;
-    top: 1em;
+    top: 0;
     left: 0;
+	padding-top: 1em;
     width: 100%;
 	overflow: scroll;
 	max-height: none !important;
