--- a/style/ui.css
+++ b/style/ui.css
@@ -899,6 +899,42 @@ ul#lyric {
 #subpage-people {
 
 }
+#subpage-people > .person {
+	display: inline-block;
+	position: relative;
+	height: 3em;
+	width: 100%;
+	padding: .2em .5em;
+	box-sizing: border-box;
+	border-bottom: 1px solid rgba(100,100,100,0.2);
+}
+.person > .icon {
+	padding: 1.1em;
+	margin: 0;
+	border-radius: 100%;
+	vertical-align: top;
+}
+.person > .tag {
+	display: inline-block;
+	margin: 0 .5em;
+}
+.person .userName,
+.person .lastMessage {
+	display: block;
+}
+.userName {
+	color: rgba(0,0,0,0.8);
+	font-size: 0.6em;
+}
+.unreadCount {
+	color: white;
+	background-color: red;
+	border-radius: 100%;
+	padding: .2em;
+	position: absolute;
+	right: 0.5em;
+	top: 0.75em;
+}
 
 .bar-sub-controls {
 	position: absolute;
