--- a/style/ui.css
+++ b/style/ui.css
@@ -381,7 +381,7 @@ hr.divider {
 }
 #view-canvas {
 	position: absolute;
-	top: -50px;
+	top: -20px;
 	left: -150px;
 }
 
@@ -863,7 +863,7 @@ ul#lyric {
 	box-sizing: border-box;
 	width: 100%;
 	height: 100%;
-	overflow-y: scroll;
+	overflow: hidden;
 	position: absolute;
 }
 #page-system > .subpage-container {
