--- a/style/ui.css
+++ b/style/ui.css
@@ -841,8 +841,8 @@ ul#lyric {
 	width: 100%;
 	height: 100%;
 	/* wechat live on this ?*/
-	overflow-y: scroll;
-	/*overflow: hidden;*/
+	/*overflow-y: scroll;*/
+	overflow: hidden;
 	position: absolute;
 }
 #page-system > .subpage-container {
